--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,9 @@ insert_final_newline = true
 max_line_length = 80
 trim_trailing_whitespace = true
 
+[Makefile]
+indent_style = tab
+
 [*.md]
 max_line_length = 0
 trim_trailing_whitespace = false
